--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -2,12 +2,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/navigation_settings"
+        android:id="@+id/navigation_account"
         android:icon="@drawable/ic_settings_black_24dp"
         android:title="@string/title_settings" />
 
     <item
-        android:id="@+id/navigation_home"
+        android:id="@+id/navigation_recipes"
         android:icon="@drawable/ic_restaurant_menu_black_24dp"
         android:title="@string/title_home" />
 
