--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -3,13 +3,13 @@
 
     <item
         android:id="@+id/navigation_account"
-        android:icon="@drawable/ic_settings_black_24dp"
-        android:title="@string/title_settings" />
+        android:icon="@drawable/ic_account_box_black_24dp"
+        android:title="@string/title_account" />
 
     <item
         android:id="@+id/navigation_recipes"
         android:icon="@drawable/ic_restaurant_menu_black_24dp"
-        android:title="@string/title_home" />
+        android:title="@string/title_recipes" />
 
     <item
         android:id="@+id/navigation_my_recipes"
