--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,14 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light">
+    android:background="@android:color/holo_red_light"
+    android:orientation="vertical">
 
     <TextView
+        android:id="@+id/idd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Account fragment"
-        android:textSize="30dp"
-        android:layout_centerInParent="true"/>
+        android:textSize="30dp"/>
 
-</RelativeLayout>
+    <Button
+        android:id="@+id/got_to_login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go_to_login"
+        android:onClick="goToLogin"/>
+
+    <Button
+        android:id="@+id/got_to_register_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/go_to_register"
+        android:onClick="goToRegister"/>
+
+</LinearLayout>
