Encrypter was tested, sha256 now works

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -109,7 +109,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/register_btn_action"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="testRun"/>
 
         </LinearLayout>
     </ScrollView>
