--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -10,16 +10,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".LoginActivity"
-    android:layout_marginTop="50dp">
-
-    <!-- Login progress -->
-    <ProgressBar
-        android:id="@+id/login_progress"
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
-        android:visibility="gone" />
+    android:layout_marginTop="10dp">
 
     <ScrollView
         android:id="@+id/login_form"
@@ -38,7 +29,8 @@
                 android:layout_height="match_parent"
                 android:visibility="visible"
                 android:text="potential error"
-                android:textSize="20dp"
+                android:textSize="15dp"
+                android:textColor="@color/colorError"
                 android:layout_gravity="center_horizontal"/>
 
             <android.support.design.widget.TextInputLayout
@@ -78,7 +70,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/login_btn_action"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="login"/>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -91,7 +84,8 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:text="@string/login_go_to_register"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:onClick="goToRegister"/>
 
         </LinearLayout>
     </ScrollView>
