--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -82,20 +82,30 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
-                    android:text="@string/create_recipe_image" />
+                    android:text="@string/create_recipe_image"
+                    android:onClick="takePicture"/>
 
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
+                    <!--<ImageView-->
+                        <!--android:id="@+id/picture"-->
+                        <!--android:layout_width="200dp"-->
+                        <!--android:layout_height="150dp"-->
+                        <!--android:layout_centerInParent="true"-->
+                        <!--android:layout_gravity="center_horizontal|center_vertical"-->
+                        <!--android:maxWidth="100dp"-->
+                        <!--android:maxHeight="100dp"-->
+                        <!--android:src="@drawable/ic_image_black_24dp"/>-->
                     <ImageView
-                        android:layout_width="200dp"
-                        android:layout_height="150dp"
-                        android:layout_centerInParent="true"
-                        android:layout_gravity="center_horizontal|center_vertical"
-                        android:maxWidth="100dp"
-                        android:maxHeight="100dp"
-                        android:src="@drawable/ic_image_black_24dp"/>
+                    android:id="@+id/picture"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerInParent="true"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:maxWidth="100dp"
+                    android:maxHeight="100dp"/>
                 </RelativeLayout>
             </LinearLayout>
 
