--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -80,8 +80,8 @@
 
                 <Button
                     android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:drawableLeft="@drawable/ic_add_a_photo_black_24dp"
+                    android:layout_height="200dp"
+                    android:drawableRight="@drawable/ic_image_black_24dp"
                     android:text="@string/create_recipe_image"
                     android:onClick="takePicture"/>
 
@@ -104,8 +104,8 @@
                     android:layout_height="wrap_content"
                     android:layout_centerInParent="true"
                     android:layout_gravity="center_horizontal|center_vertical"
-                    android:maxWidth="100dp"
-                    android:maxHeight="100dp"/>
+                    android:maxWidth="300dp"
+                    android:maxHeight="200dp"/>
                 </RelativeLayout>
             </LinearLayout>
 
