--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -79,6 +79,7 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/button_to_take_picture"
                     android:layout_width="wrap_content"
                     android:layout_height="200dp"
                     android:drawableRight="@drawable/ic_image_black_24dp"
@@ -89,15 +90,6 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <!--<ImageView-->
-                        <!--android:id="@+id/picture"-->
-                        <!--android:layout_width="200dp"-->
-                        <!--android:layout_height="150dp"-->
-                        <!--android:layout_centerInParent="true"-->
-                        <!--android:layout_gravity="center_horizontal|center_vertical"-->
-                        <!--android:maxWidth="100dp"-->
-                        <!--android:maxHeight="100dp"-->
-                        <!--android:src="@drawable/ic_image_black_24dp"/>-->
                     <ImageView
                     android:id="@+id/picture"
                     android:layout_width="wrap_content"
