--- a/app/src/main/res/layout/fragment_logged_account.xml
+++ b/app/src/main/res/layout/fragment_logged_account.xml
@@ -2,29 +2,22 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_red_light"
+    android:background="@android:color/holo_purple"
     android:orientation="vertical">
 
     <TextView
         android:id="@+id/idd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Account fragment"
+        android:text="Logged account fragment"
         android:textSize="30dp"/>
 
     <Button
-        android:id="@+id/go_to_login_button"
+        android:id="@+id/logout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go_to_login"
-        android:onClick="goToLogin"/>
+        android:text="@string/logout"
+        android:onClick="logout"/>
 
-    <Button
-        android:id="@+id/go_to_register_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/go_to_register"
-        android:onClick="goToRegister"
-        android:visibility="gone"/>
 
 </LinearLayout>
