--- a/app/src/main/res/layout/fragment_logged_account.xml
+++ b/app/src/main/res/layout/fragment_logged_account.xml
@@ -1,23 +1,72 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_purple"
-    android:orientation="vertical">
+    android:background="@color/colorMyBackround"
+    android:padding="20dp">
 
     <TextView
         android:id="@+id/idd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Logged account fragment"
-        android:textSize="30dp"/>
+        android:text="Account information:"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+
+
+    <TableLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:stretchColumns="1"
+        android:paddingBottom="300dp">
+        <TableRow>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="username:"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/info_username"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="sample username"
+                android:textSize="25dp"
+                android:gravity="right"/>
+        </TableRow>
+        <TableRow
+            android:layout_marginTop="30dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="email:"
+                android:textSize="25dp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/info_email"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="sample email"
+                android:textSize="25dp"
+                android:gravity="right"/>
+        </TableRow>
+    </TableLayout>
 
     <Button
         android:id="@+id/logout_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="100dp"
+        android:onClick="logout"
+        android:paddingLeft="30dp"
+        android:paddingRight="30dp"
+        android:textSize="30dp"
         android:text="@string/logout"
-        android:onClick="logout"/>
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentBottom="true"/>
 
 
-</LinearLayout>
+</RelativeLayout>
