--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#4286F4</color>
     <color name="colorError">#FF3232</color>
+    <color name="colorMyBackround">#DCFFC6</color>
 </resources>
