--- a/app/src/main/res/layout/fragment_my_recipes.xml
+++ b/app/src/main/res/layout/fragment_my_recipes.xml
@@ -8,7 +8,7 @@
         android:id="@+id/create_recipe"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/go_to_register"
+        android:text="create new recipe"
         android:layout_centerInParent="true"
         android:onClick="createRecipe"/>
 
