--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Account fragment"
-        android:textSize="30dp"/>
+        android:textSize="30dp"
+        android:visibility="gone"/>
 
 <LinearLayout
     android:layout_width="wrap_content"
