--- a/app/src/main/res/layout/fragment_recipes.xml
+++ b/app/src/main/res/layout/fragment_recipes.xml
@@ -1,28 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_green_light"
-    android:orientation="vertical">
+    android:background="@color/colorMyBackround"
+    android:padding="20dp">
 
     <TextView
+        android:id="@+id/recipes_title_text_view"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Recipes fragment"
-        android:textSize="30dp"/>
+        android:paddingBottom="25dp"
+        android:text="Recipes"
+        android:textSize="30dp" />
 
-    <Button
-        android:id="@+id/test_button"
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Click me"
-        android:onClick="getAllRecipes"/>
+        android:layout_height="500dp"
+        android:layout_below="@+id/recipes_title_text_view">
 
-    <TextView
-        android:id="@+id/test_label"
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <TextView
+                android:id="@+id/test_label"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="json will be here"
+                android:textSize="20dp" />
+        </LinearLayout>
+
+    </ScrollView>
+
+    <LinearLayout
+        android:id="@+id/recipes_bottom_layout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="json will be here"
-        android:textSize="20dp"/>
+        android:layout_alignParentBottom="true"
+        android:layout_centerInParent="true"
+        android:minWidth="200dp"
+        android:orientation="vertical"
+        android:visibility="visible">
 
-</LinearLayout>
+        <ProgressBar
+            android:id="@+id/recipes_progress_circle"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal|center_vertical"
+            android:visibility="gone"/>
+
+        <TextView
+            android:id="@+id/recipes_error_message"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="potential error"
+            android:textColor="@color/colorError"
+            android:textSize="15dp"
+            android:visibility="gone" />
+
+        <Button
+            android:id="@+id/recipes_fire"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:onClick="getAllRecipes"
+            android:text="@string/recipes_fire" />
+    </LinearLayout>
+
+</RelativeLayout>
