--- a/app/src/main/res/layout/activity_create_recipe.xml
+++ b/app/src/main/res/layout/activity_create_recipe.xml
@@ -135,7 +135,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/create_recipe_button"
-            android:onClick="sendNewRecipe"/>
+            android:onClick="sendImage"/>
     </LinearLayout>
 
 </RelativeLayout>
