displaying image in details view works

--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -56,14 +56,13 @@
         android:textSize="20dp"
         android:paddingTop="30dp"/>
 
-    <TextView
+    <ImageView
         android:id="@+id/recipe_detail_image"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/recipe_detail_description"
-        android:text="This is the place for image"
-        android:textSize="20dp"
-        android:padding="50dp"/>
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"/>
 
 </RelativeLayout>
 </ScrollView>
