--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -4,65 +4,70 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DetailsActivity"
+    android:background="@color/colorMyBackround"
     android:padding="20dp"
-    android:background="@color/colorMyBackround">
+    tools:context=".DetailsActivity">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <TextView
-        android:id="@+id/recipe_detail_name"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:text="Sample name"
-        android:textSize="30dp"/>
-    <TextView
-        android:id="@+id/recipe_detail_short_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_detail_name"
-        android:text="Sample name"
-        android:textSize="15dp"/>
-    <TextView
-        android:id="@+id/recipe_detail_time"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_detail_short_description"
-        android:text="50 minutes"
-        android:textSize="20dp"/>
-    <TextView
-        android:id="@+id/recipe_detail_is_public"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_detail_time"
-        android:text="is public?"
-        android:textSize="20dp"/>
-    <TextView
-        android:id="@+id/recipe_detail_last_modification"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_detail_is_public"
-        android:text="long time ago"
-        android:textSize="20dp"/>
+        android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/recipe_detail_description"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_detail_last_modification"
-        android:text="Some long description"
-        android:textSize="20dp"
-        android:paddingTop="30dp"/>
+        <TextView
+            android:id="@+id/recipe_detail_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:text="Sample name"
+            android:textSize="30dp" />
 
-    <ImageView
-        android:id="@+id/recipe_detail_image"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/recipe_detail_description"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"/>
+        <TextView
+            android:id="@+id/recipe_detail_short_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recipe_detail_name"
+            android:text="Sample name"
+            android:textSize="15dp" />
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/recipe_detail_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recipe_detail_short_description"
+            android:text="50 minutes"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/recipe_detail_is_public"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recipe_detail_time"
+            android:text="is public?"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/recipe_detail_last_modification"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recipe_detail_is_public"
+            android:text="long time ago"
+            android:textSize="20dp" />
+
+        <TextView
+            android:id="@+id/recipe_detail_description"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recipe_detail_last_modification"
+            android:paddingTop="30dp"
+            android:text="Some long description"
+            android:textSize="20dp" />
+
+        <ImageView
+            android:id="@+id/recipe_detail_image"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/recipe_detail_description"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true" />
+
+    </RelativeLayout>
 </ScrollView>
