--- a/app/src/main/res/layout/fragment_favourites.xml
+++ b/app/src/main/res/layout/fragment_favourites.xml
@@ -13,27 +13,29 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"/>
     <Button
-        android:id="@+id/fire_button"
+        android:id="@+id/show_notes"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/text"
         android:layout_centerHorizontal="true"
         android:text="fire"
         android:textSize="30dp"
-        android:onClick="getImage"/>
-    <LinearLayout
-        android:layout_width="match_parent"
+        android:onClick="showNotes"/>
+    <Button
+        android:id="@+id/add_note"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/fire_button"
+        android:layout_below="@+id/show_notes"
         android:layout_centerHorizontal="true"
-        android:orientation="vertical">
-        <ImageView
-            android:id="@+id/my_image_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:minHeight="200dp"
-            android:minWidth="200dp"
-            android:layout_gravity="center_horizontal|center_vertical"/>
-    </LinearLayout>
+        android:text="addNote"
+        android:textSize="30dp"
+        android:onClick="addNote"/>
+    <TextView
+        android:id="@+id/notes_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/add_note"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"/>
 
 </RelativeLayout>
